feat: Integrate MongoDB and Mongoose for data persistence
- Add Mongoose ODM to project dependencies
- Create Tour model with schema (name, rating, price)
- Refactor tours controller: migrate from file-based JSON to async MongoDB operations
- Update server.js: add MongoDB connection with error handling

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
   ],
   "plugins": ["prettier"],
   "settings": {
-    "node/version": ">=8.3.0"
+    "node/version": ">=7.6.0"
   },
   "rules": {
     "prettier/prettier": "error",
@@ -20,6 +20,7 @@
     "no-return-await": "off",
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
+    "node/no-unsupported-features/es-syntax": "off",
     "prefer-destructuring": [
       "error",
       { "object": true, "array": false }
